--- a/web/public/colors.css
+++ b/web/public/colors.css
@@ -108,7 +108,7 @@ svg .node.job.pending rect {
 #page-header.pending .build-header {
   background: #b0b0b0;
 }
-li.pending {
+.pending {
   background: #b0b0b0;
 }
 .legend dt.pending {
@@ -168,7 +168,7 @@ svg .node.job.succeeded rect {
 #page-header.succeeded {
   background: #90a959;
 }
-li.succeeded {
+.succeeded {
   background: #90a959;
 }
 .legend dt.succeeded {
@@ -187,7 +187,7 @@ svg .node.job.failed rect {
 #page-header.failed {
   background: #ac4142;
 }
-li.failed {
+.failed {
   background: #ac4142;
 }
 .legend dt.failed {
@@ -212,7 +212,7 @@ svg .node.job.errored rect {
 #page-header.errored {
   background: #d28445;
 }
-li.errored {
+.errored {
   background: #d28445;
 }
 .legend dt.errored {
@@ -231,7 +231,7 @@ svg .node.job.aborted rect {
 #page-header.aborted {
   background: #8f5536;
 }
-li.aborted {
+.aborted {
   background: #8f5536;
 }
 .legend dt.aborted {
@@ -241,7 +241,7 @@ li.aborted {
 #page-header.started {
   background: #f4bf75;
 }
-li.started {
+.started {
   background: #f4bf75;
 }
 .legend dt.started rect {
@@ -435,4 +435,43 @@ svg .job.node.started div,
 .ansi-bright-white-bg {
   background-color: #f5f5f5;
   font-weight: bold;
+}
+.table {
+  font-size: 1.2em;
+  color: #b0b0b0;
+  border-collapse: collapse;
+  width: 100%;
+}
+.table td {
+  padding: 5px;
+  border-top: 1px solid #303030;
+}
+.table td:first-child {
+  padding-left: 0px;
+}
+.table td:last-child {
+  border-right: 1px solid #303030;
+}
+.build-number {
+  font-size: 2em;
+  color: #f5f5f5;
+  padding: 5px;
+  text-align: center;
+  border: 5px solid #151515;
+  text-decoration: none;
+  font-weight: bold;
+}
+.table thead {
+  text-align: left;
+}
+.build-one-off {
+  background-color: #505050;
+}
+.nav-item {
+  font-size: 18px;
+  line-height: 40px;
+}
+.nav-item,
+.nav-item a {
+  color: #f5f5f5;
 }
