--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -9,6 +9,9 @@
   <body>
     <nav>
       <ul class="groups"><li class="main"><a href="/"><i class="fa fa-home"></i></a></li>{{range .GroupStates}}<li{{if .Enabled}} class="active"{{end}}><a href="/?groups={{.Name}}">{{.Name}}</a></li>{{end}}</ul>
+      <ul class="nav-right">
+        <li class="nav-item"><a href="/builds"><i class="fa fa-tasks"></i></a></li>
+      </ul>
     </nav>
 
     <div id="content">
