--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -84,6 +84,13 @@ svg h1 a { color: @base07; }
 .groups li a { color: @base07; }
 #version-history .toggle-resource-version { color: @base07; }
 #cli-downloads a { color: @base07; }
+.h1 {
+  line-height: 60px;
+  color: @base07;
+  font-weight: bold;
+  font-size: 24px;
+}
+
 
 /* good */
 svg .edge.succeeded { stroke: @base0B; }
