--- a/web/templates/builds/show.html
+++ b/web/templates/builds/show.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<div id="build-body">
+<div id="build-body" class="build-body-noSubHeader">
   <div id="build-requires-auth">
     <form method="get" action="{{url "LogIn"}}">
       <input type="submit" value="log in to view" />
