--- a/web/public/main.css
+++ b/web/public/main.css
@@ -490,3 +490,7 @@ svg .active.node rect {
 svg .active.node text {
   font-size: 1.06em;
 }
+
+/* Util Classes */
+.fl {float: left;}
+.fr {float: right;}
