--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -15,6 +15,8 @@
       <dd>errored</dd>
     <dt class="aborted"></dt>
       <dd>aborted</dd>
+    <dt class="paused"></dt>
+      <dd>paused</dd>
   </dl>
 </div>
 
