--- a/web/templates/job.html
+++ b/web/templates/job.html
@@ -1,26 +1,39 @@
 {{define "title"}}{{.Job.Name}} - Concourse{{end}}
 
 {{define "body"}}
-<div id="page-header">
-  <div class="build-header {{.CurrentBuild.Status}}">
-    <form class="trigger-build" method="post" action="{{url "TriggerBuild" .Job}}">
-      <button><i class="fa fa-plus-circle"></i></button>
-    </form>
+<div class="js-job" data-job-name="{{.Job.Name}}">
+  <div id="page-header">
+    <div class="build-header {{.CurrentBuild.Status}}">
 
-    <h1>{{.Job.Name}}</h1>
-  </div>
-</div>
-
-<div id="build-body">
-  <div class="section">
-    <h2>builds</h2>
-    <ul class="builds-list">
-      {{$job := .Job}}
-      {{$currentName := .CurrentBuild.Name}}
-      {{range .Builds}}
-      <li class="{{.Status}}{{if eq .Name $currentName}} current{{end}}"><a href="{{url "GetBuild" $job .}}">{{.Name}}</a></li>
+      {{if .DBJob.Paused}}
+        <span class="btn-pause btn-pause-large fl enabled js-pauseJobCheck"><i class="fa fa-fw fa-play"></i></span>
+      {{else}}
+        <span class="btn-pause btn-pause-large fl disabled js-pauseJobCheck"><i class="fa fa-fw fa-pause"></i></span>
       {{end}}
-    </ul>
+      <form class="trigger-build" method="post" action="{{url "TriggerBuild" .Job}}">
+        <button class="build-action fr"><i class="fa fa-plus-circle"></i></button>
+      </form>
+
+
+      <h1>{{.Job.Name}}</h1>
+
+    </div>
+  </div>
+
+  <div id="build-body">
+    <div class="section">
+      <h2>builds</h2>
+      <ul class="builds-list">
+        {{$job := .Job}}
+        {{$currentName := .CurrentBuild.Name}}
+        {{range .Builds}}
+        <li class="{{.Status}}{{if eq .Name $currentName}} current {{end}}" data-job-status="{{.Status}}"><a href="{{url "GetBuild" $job .}}">{{.Name}}</a></li>
+        {{end}}
+      </ul>
+    </div>
   </div>
 </div>
+
+<script src="{{asset "jquery-2.1.1.min.js"}}"></script>
+<script src="{{asset "concourse.js"}}"></script>
 {{end}}
