Make the start icon dance again
[Finishes #92408228]

--- a/web/public/colors.less
+++ b/web/public/colors.less
@@ -133,6 +133,7 @@ svg .node.job.aborted rect { fill: @base0F; }
 
 svg .job.node.started div,
 .legend dt.started {
+  background-color: transparent;
   -webkit-animation: started-circles 1s linear infinite;
 }
 
