--- a/web/public/colors.css
+++ b/web/public/colors.css
@@ -258,6 +258,7 @@ svg .node.job.aborted rect {
 }
 svg .job.node.started div,
 .legend dt.started {
+  background-color: transparent;
   -webkit-animation: started-circles 1s linear infinite;
 }
 @-webkit-keyframes started-circles {
