Add colored lines for paused resources and jobs

--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -255,6 +255,10 @@ svg .job.node.started div,
   svg & rect {
     fill: @base0D;
   }
+  svg .edge& {
+    stroke: @base0D;
+  }
+
 }
 
 .btn-pause {
