Remove reset.css temporarily

--- a/web/assets/css/main.less
+++ b/web/assets/css/main.less
@@ -1,4 +1,4 @@
-@import "lib/reset.css";
+// @import "lib/reset.css";
 
 @import "lib/font-awesome.min.css";
 
@@ -8,6 +8,8 @@
 @import "svg.less";
 @import "nav.less";
 @import "colors.less";
-@import "legacy.less";
 
 @import "utils.less";
+
+
+@import "legacy.less";
