Rework part of legacy.less and more organization

--- a/web/assets/css/layout.less
+++ b/web/assets/css/layout.less
@@ -38,12 +38,22 @@ nav .groups li a {
 }
 
 
-
-
 .nav-item {
   &, a {
     color: @base07;
   }
   font-size: 18px;
   line-height: 40px;
+}
+
+
+#page-header {
+  width: 100%;
+  position: fixed;
+  top: 40px;
+  z-index: 2;
+}
+
+#content {
+  margin-top: 40px;
 }
