--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -6,22 +6,13 @@
   z-index: 2;
 }
 
-
-#content {
-  margin-top: 40px;
-}
-
-.wrap {
-  padding: 0 20px;
-}
-
 .build-header,
 .resource-header {
   padding: 0;
   height: 60px;
 }
 
-// .build-header h1,
+.build-header h1,
 .resource-header h1 {
   line-height: 60px;
   float: left;
