--- a/web/assets/css/main.less
+++ b/web/assets/css/main.less
@@ -1,4 +1,3 @@
-// @import "lib/reset.css";
 
 @import "lib/font-awesome.min.css";
 
@@ -6,7 +5,7 @@
 @import "typography.less";
 
 @import "svg.less";
-@import "nav.less";
+@import "layout.less";
 @import "colors.less";
 
 @import "utils.less";
