--- a/web/templates/builds/index.html
+++ b/web/templates/builds/index.html
@@ -1,7 +1,7 @@
 {{define "title"}}Builds - Concourse{{end}}
 
 {{define "body"}}
-<div class="wrap">
+<div class="phl">
   <h1 class="h1">builds</h1>
 
   <div>
