--- a/web/templates/resource.html
+++ b/web/templates/resource.html
@@ -1,10 +1,9 @@
 {{define "title"}}History - Concourse{{end}}
 
 {{define "body"}}
-<div class="resource-header">
+<div class="mhm">
   <h1>{{.Resource.Name}}</h1>
 </div>
-
 
 <div class="js-resource" data-resource-name="{{.Resource.Name}}">
   <div class="resource-check-status">
