Change abort build to use ajax instead of form
[Finishes #86372728]

--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -25,10 +25,10 @@
 .build-action i:active { background: @base04; }
 .build-action i:focus { background: @base04; }
 
-.build-header .abort-build button i { color: @base08; }
-.build-header .abort-build button i:hover { background: @base08; color: @base07; }
-.build-header .abort-build button i:active { color: @base07; background: @base0F; }
-.build-header .abort-build button i:focus { background: @base0F; }
+.build-action-abort i { color: @base08; }
+.build-action-abort i:hover { background: @base08; color: @base07; }
+.build-action-abort i:active { color: @base07; background: @base0F; }
+.build-action-abort i:focus { background: @base0F; }
 
 .build-step i.failed    { color: @base07; background: @base08; }
 .build-step i.succeeded { color: @base07; background: @base0B; }
