--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -2,15 +2,13 @@
 
 {{define "body"}}
 <div id="page-header" class="{{.Build.Status}}">
-  <div class="build-header">
+  <div class="build-header js-build" data-build-id="{{.Build.ID}}">
     <form class="trigger-build" method="post" action="{{url "TriggerBuild" .Job}}">
       <button class="build-action fr"><i class="fa fa-plus-circle"></i></button>
     </form>
 
     {{if .Build.Abortable}}
-    <form class="abort-build" method="post" action="{{url "AbortBuild" .Build}}">
-      <button class="build-action fr"><i class="fa fa-times-circle"></i></button>
-    </form>
+    <span class="build-action build-action-abort fr js-abortBuild"><i class="fa fa-times-circle"></i></span>
     {{end}}
 
     <h1><a href="{{url "GetJob" .Job}}">{{.Job.Name}} #{{.Build.Name}}</a></h1>
@@ -57,4 +55,6 @@
 
   streamLog({{url "BuildEvents" .Build | js}}, {{.Build.Status | js}})
 </script>
+<script src="{{asset "jquery-2.1.1.min.js"}}"></script>
+<script src="{{asset "concourse.js"}}"></script>
 {{end}}
