Make the version history pretty
[finishes #92884182]

--- a/web/assets/css/main.less
+++ b/web/assets/css/main.less
@@ -8,9 +8,10 @@
 @import "layout.less";
 @import "colors.less";
 
-@import "utils.less";
 
 @import "buttons.less";
+@import "modules.less";
 
 
 @import "legacy.less";
+@import "utils.less";
