Fix build-meta data floats and compile things for prod
[Finishes #92884182]

--- a/web/templates/resource.html
+++ b/web/templates/resource.html
@@ -82,7 +82,7 @@
 
         <div class="fl" style="width:33%">
           <div class="list-collapsable-title" style="padding-left:5em;">metadata</div>
-          <dl class="build-metadata">
+          <dl class="build-metadata fr">
             {{range .VersionedResource.Metadata}}
             <dt>{{.Name}}</dt>
               <dd>{{.Value}}</dd>
