Change build events to be only by build id

--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -53,7 +53,7 @@
   );
   {{end}}
 
-  streamLog({{url "BuildEvents" .PipelineName .Build | js}}, {{.Build.Status | js}})
+  streamLog({{url "BuildEvents" .Build | js}}, {{.Build.Status | js}})
 </script>
 <script src="{{asset "jquery-2.1.1.min.js"}}"></script>
 <script src="{{asset "concourse.js"}}"></script>
