--- a/web/templates/builds/show.html
+++ b/web/templates/builds/show.html
@@ -28,6 +28,6 @@
 <script src="{{asset "jquery-2.1.1.min.js"}}"></script>
 <script src="{{asset "concourse.js"}}"></script>
 <script type="text/javascript">
-  streamLog({{url "BuildEvents" .PipelineName .Build | js}}, {{.Build.Status | js}})
+  streamLog({{url "BuildEvents" .Build | js}}, {{.Build.Status | js}})
 </script>
 {{end}}
