Add UI for multiple pipelines
[Finishes #93587948]

--- a/web/assets/css/buttons.less
+++ b/web/assets/css/buttons.less
@@ -14,3 +14,10 @@
     .disabled & {
     }
 }
+
+.btn-hamburger {
+  padding: 0 10px;
+  font-size: 18px;
+  line-height: 40px;
+  cursor: pointer;
+}
