--- a/web/assets/css/layout.less
+++ b/web/assets/css/layout.less
@@ -11,7 +11,6 @@
 nav .groups {
   height: 40px;
   display: block;
-  overflow: auto;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -19,18 +18,18 @@ nav .groups {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 2;
+  z-index: 3;
+  font-size: 14px;
 }
 
 .nav-right {
   list-style: none;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   top: 0;
   right: 10px;
-   height: 40px;
+  height: 40px;
   margin: 0;
-
 }
 
 nav .groups li {
@@ -64,4 +63,9 @@ nav .groups li a {
 
 #content {
   margin-top: 40px;
+}
+
+
+.build-actions {
+  width: 150px;
 }
