--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -6,14 +6,12 @@
   z-index: 2;
 }
 
-.build-header,
-.resource-header {
+.build-header {
   padding: 0;
   height: 60px;
 }
 
-.build-header h1,
-.resource-header h1 {
+.build-header h1{
   line-height: 60px;
   float: left;
   margin: 0;
