--- a/web/assets/css/typography.less
+++ b/web/assets/css/typography.less
@@ -11,6 +11,9 @@ h3, .h3 {
   font-weight: bold;
 }
 
+.nav-text {
+  font-size: 18px;
+}
 
 /* ansi text */
 ::selection { background: @base03; color: @base07; }
