--- a/web/templates/builds/index.html
+++ b/web/templates/builds/index.html
@@ -26,4 +26,7 @@
     </table>
   </div>
 </div>
+
+<script src="{{asset "jquery-2.1.1.min.js"}}"></script>
+<script src="{{asset "concourse.js"}}"></script>
 {{end}}
