--- a/web/templates/pipeline.html
+++ b/web/templates/pipeline.html
@@ -33,6 +33,7 @@
 <script src="{{asset "jquery-2.1.1.min.js"}}"></script>
 <script src="{{asset "d3.v355.min.js"}}"></script>
 <script src="{{asset "graph.js"}}"></script>
+<script src="{{asset "concourse.js"}}"></script>
 <script src="{{asset "index.js"}}"></script>
 
 <script>
