add pipeline name to group urls
[Finishes #93854366]

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -14,7 +14,10 @@
       <div class="page-to-slide">
         <nav>
           <ul class="groups">
-            <li class="main"><span class="js-pipelinesNav-toggle btn-hamburger"><i class="fa fa-bars"></i></span></li><li class="main"><a href="/"><i class="fa fa-home"></i></a></li>{{range .GroupStates}}<li{{if .Enabled}} class="active"{{end}}><a href="/?groups={{.Name}}">{{.Name}}</a></li>{{end}}
+            <li class="main"><span class="js-pipelinesNav-toggle btn-hamburger"><i class="fa fa-bars"></i></span></li><li class="main"><a href="/"><i class="fa fa-home"></i></a></li>
+            {{range .GroupStates}}
+              <li{{if .Enabled}} class="active"{{end}}><a href="/pipelines/{{$.PipelineName}}?groups={{.Name}}">{{.Name}}</a></li>
+            {{end}}
           </ul>
           <ul class="nav-right">
             <li class="nav-item"><a href="/builds"><i class="fa fa-tasks"></i></a></li>
