add ability to pause and unpause a pipeline
[Finishes #92302100]

--- a/web/assets/css/buttons.less
+++ b/web/assets/css/buttons.less
@@ -20,4 +20,10 @@
   font-size: 18px;
   line-height: 40px;
   cursor: pointer;
+  color: @base07;
+}
+
+.btn-pause {
+  text-align: center;
+  width: 28px;
 }
