--- a/web/templates/resource.html
+++ b/web/templates/resource.html
@@ -5,7 +5,7 @@
   <h1>{{.Resource.Name}}</h1>
 </div>
 
-<div class="js-resource" data-resource-name="{{.Resource.Name}}">
+<div class="js-resource" data-endpoint="pipelines/{{.PipelineName}}/resources/{{.Resource.Name}}">
   <div class="resource-check-status">
     <div class="steps">
       <div class="build-step">
@@ -24,10 +24,10 @@
           <div class="header">
             <i class="fr succeeded fa fa-fw fa-check"></i>
             {{if .DBResource.Paused}}
-              <span class="btn-pause fl enabled js-pauseResourceCheck"><i class="fa fa-fw fa-play"></i></span>
+              <span class="btn-pause fl enabled js-pauseUnpause"><i class="fa fa-fw fa-play"></i></span>
               <h3 class="js-resourceStatusText">checking paused</h3>
             {{else}}
-              <span class="btn-pause fl disabled js-pauseResourceCheck"><i class="fa fa-fw fa-pause"></i></span>
+              <span class="btn-pause fl disabled js-pauseUnpause"><i class="fa fa-fw fa-pause"></i></span>
               <h3 class="js-resourceStatusText">checking successfully</h3>
             {{end}}
           </div>
