--- a/web/templates/build.html
+++ b/web/templates/build.html
@@ -62,9 +62,9 @@
   streamLog({{url "BuildEvents" .Build | js}}, {{.Build.Status | js}})
 </script>
 
-<script>
-  window.pipelineName = {{.PipelineName}};
-</script>
 <script src="{{asset "jquery-2.1.1.min.js"}}"></script>
 <script src="{{asset "concourse.js"}}"></script>
+<script>
+  concourse.pipelineName = {{.PipelineName}};
+</script>
 {{end}}
