--- a/web/templates/job.html
+++ b/web/templates/job.html
@@ -34,9 +34,9 @@
   </div>
 </div>
 
-<script>
-  window.pipelineName = {{.PipelineName}};
-</script>
 <script src="{{asset "jquery-2.1.1.min.js"}}"></script>
 <script src="{{asset "concourse.js"}}"></script>
+<script>
+  concourse.pipelineName = {{.PipelineName}};
+</script>
 {{end}}
