--- a/web/templates/resource.html
+++ b/web/templates/resource.html
@@ -96,11 +96,12 @@
 </ul>
 
 
-<script>
-  window.pipelineName = {{.PipelineName}};
-</script>
+
 
 <script src="{{asset "jquery-2.1.1.min.js"}}"></script>
 <script src="{{asset "resources.js"}}"></script>
 <script src="{{asset "concourse.js"}}"></script>
+<script>
+  concourse.pipelineName = {{.PipelineName}};
+</script>
 {{end}}
