change home button to link to the current pipeline
[Finishes #94051578]

--- a/web/templates/layouts/with_pipeline.html
+++ b/web/templates/layouts/with_pipeline.html
@@ -14,7 +14,7 @@
       <div class="page-to-slide">
         <nav>
           <ul class="js-groups groups">
-            <li class="main"><span class="js-pipelinesNav-toggle btn-hamburger"><i class="fa fa-bars"></i></span></li><li class="main"><a href="/"><i class="fa fa-home"></i></a></li>
+            <li class="main"><span class="js-pipelinesNav-toggle btn-hamburger"><i class="fa fa-bars"></i></span></li><li class="main"><a href="/pipelines/{{.PipelineName}}"><i class="fa fa-home"></i></a></li>
             {{range .GroupStates}}
               <li{{if .Enabled}} class="active"{{end}}><a href="/pipelines/{{$.PipelineName}}?groups={{.Name}}">{{.Name}}</a></li>
             {{end}}
