--- a/web/templates/layouts/without_pipeline.html
+++ b/web/templates/layouts/without_pipeline.html
@@ -3,6 +3,7 @@
   <head>
     <title>{{template "title" .}}</title>
     <link href="{{asset "main.css"}}" media="all" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/x-icon" href="{{asset "favicon.ico"}}"/>
 
   </head>
   <body class="pipelinesNav-enabled">
