show substeps differently in the ui
[#92364164]

--- a/web/assets/css/legacy.less
+++ b/web/assets/css/legacy.less
@@ -228,6 +228,13 @@ span.error {
   width: 28px;
 }
 
+.build-step.substep {
+  position: relative;
+  margin-left: 1em;
+  margin-top: -10px;
+  opacity: 0.8;
+}
+
 .build-step .header i.left {
   float: left;
 
