--- a/web/assets/css/utils.less
+++ b/web/assets/css/utils.less
@@ -41,7 +41,10 @@
 
 
 
-/* spacing classes */
+/*
+ * spacing classes
+ * .[m{margin} p{padding}][t{top} r{right} b{bottom} l{left} h{right & left} v{top & bottom} a{top & right & bottom & left}][n{0} xs{2.5} s{5} m{10} l{20} xl{40}]
+*/
 
 .ptn,.pvn,.pan {padding-top: 0;}
 .ptxs,.pvxs,.paxs {padding-top: 2.5px;}
